# quote_project_django

./: README.md  manage.py  pyproject.toml  pytest.ini
quote_project_django/: asgi.py  settings.py  urls.py  wsgi.py
quotes/: admin.py  forms.py  models.py  urls.py  views.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: add_quote.html  base.html  index.html  top_quotes.html
quotes/tests/: conftest.py  test_quotes.py
users/: decorators.py  forms.py  urls.py  views.py
users/templates/users/: login.html  profile.html  register.html  stats.html
